--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "dev:files": "npm run dev -- --host files.localhost --port 3002"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "firebase": "^12.0.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.9.0-beta.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
@@ -38,6 +40,7 @@
     "tailwindcss": "^3.4.17",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
+    "vite-plugin-vuetify": "^2.1.2",
     "vitest": "^3.2.4"
   }
 }
