--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@vueuse/core": "^13.7.0",
     "firebase": "^12.0.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
