--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,10 @@
   "$schema": "https://json.schemastore.org/prettierrc",
   "semi": true,
   "singleQuote": true,
-  "printWidth": 100
+  "printWidth": 100,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "useTabs": false,
+  "bracketSpacing": true,
+  "vueIndentScriptAndStyle": false
 }
