Doc Organizer v.1.2 is completed and working

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,9 @@ VITE_APP_ENV=development
 # Multi-App SSO Configuration
 # Domain for cross-app navigation (e.g., 'yourdomain.com' for intranet.yourdomain.com)
 VITE_APP_DOMAIN=localhost:3000
+
+# Firebase AI Logic Configuration
+# Enable/disable AI features (true/false)
+VITE_ENABLE_AI_FEATURES=true
+# Maximum file size for AI processing (MB)
+VITE_AI_MAX_FILE_SIZE_MB=20
