--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dev:files": "npm run dev -- --host files.localhost --port 3002"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.2",
     "@mdi/font": "^7.4.47",
     "@vueuse/core": "^13.7.0",
+    "element-plus": "^2.11.1",
     "firebase": "^12.2.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.17",
